--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,10 @@
----
 language: node_js
 node_js:
   - 0.10
-
 deploy:
   provider: heroku
   api_key:
-    secure: NT1klq0sA/DOFtTIV2X9gy5SPh/0ERGhPGkAPTQh3Ghtn5G6BTfH/cDvDB82D7Dhg42Gw1Ka74TG3L+gC5WoWkfXizPGlimopbRvO3DN1T/0mwzX0T3UZV7wakxjf4+6xqVVpnnu+6F0h5ABUnK8s68TQaRAllSwJk+LU1Inj2Y=
-  app: ff-hubot
+    secure: Abr/baqyx9EXAGo5XZNdXbgfoGSKfydhoIDAdtWon/SHJrVPQqddSweSzjPNNeq5O1bAFVzEMVwhIphiYxJnha/Gr2Wj0TMG/fTckxJYKIfZO+jhO11g8VJrm4+0HEUyQc9N/z7yEBFC8G2GNiNrE/1QjVpM2kGsF6BzQhjzwcA=
+  app: feedforce-hubot
   on:
-    repo: tmd45/test-hubot
+    repo: feedforce/hubot
