--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
-    "cheerio": "^0.17.0",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-hipchat": "^2.7.5",
-    "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "request": "^2.37.0"
+    "hubot-scripts": ">= 2.5.0 < 3.0.0"
   },
   "engines": {
     "node": ">= 0.8.x",
