$ npm install --save hubot-cron

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "hubot": ">= 2.6.0 < 3.0.0",
+    "hubot-cron": "^0.2.5",
     "hubot-hipchat": "^2.7.5",
     "hubot-scripts": ">= 2.5.0 < 3.0.0"
   },
