--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-cron": "^0.2.5",
+    "hubot-ping": "git://github.com/bouzuya/hubot-ping.git",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^2.2.0"
   },
