--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-cron": "^0.2.5",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
-    "hubot-slack": "^2.2.0"
+    "hubot-slack": "^2.2.0",
+    "xml2js": "^0.4.4"
   },
   "engines": {
     "node": ">= 0.8.x",
