--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "hubot-cron": "^0.2.5",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^2.2.0",
-    "hubot-slack-timeline": ">= 0.1.0"
+    "hubot-slack-timeline": ">= 0.1.0",
+    "request": ">= 2.51.0"
   },
   "engines": {
     "node": ">= 0.8.x",
