--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "hubot": ">= 2.11.4",
     "hubot-cron": "^0.2.7",
     "hubot-scripts": ">= 2.5.16",
-    "hubot-slack": "^3.3.0",
+    "hubot-slack": "^3.3.0"
   },
   "engines": {
     "node": ">= 0.10.x",
