--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hubot-hotpepper": "^0.1.4",
     "hubot-scripts": ">=2.16.2",
     "hubot-slack": "^3.3.0",
+    "hubot-slack-vote": "0.0.5",
     "request": "^2.65.0"
   },
   "engines": {
