--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hubot-scripts": ">=2.16.2",
     "hubot-slack": "^3.3.0",
     "hubot-slack-vote": "0.0.5",
+    "node-trello": "^1.1.2",
     "request": "^2.65.0"
   },
   "engines": {
